SDIT-844 Improve GET /api/bookings/v2